[gd_scene load_steps=13 format=2]

[ext_resource path="res://img/pioneer.jpg" type="Texture" id=1]
[ext_resource path="res://fonts/Montserrat-ExtraBold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/CreateMusic.gd" type="Script" id=3]
[ext_resource path="res://audio/electro_back.wav" type="AudioStream" id=4]
[ext_resource path="res://scripts/PannelScript.gd" type="Script" id=5]
[ext_resource path="res://scripts/AudioScript.gd" type="Script" id=6]
[ext_resource path="res://audio/piano_back.wav" type="AudioStream" id=7]
[ext_resource path="res://audio/rap_back.wav" type="AudioStream" id=8]
[ext_resource path="res://scripts/AudioSricptSample.gd" type="Script" id=9]
[ext_resource path="res://audio/reggae_back.wav" type="AudioStream" id=10]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 2 )

[node name="CreateMusic" type="Node2D"]

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 1 )
expand = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="TextureRect"]
margin_left = 890.0
margin_top = 510.0
margin_right = 1170.0
margin_bottom = 570.0
rect_min_size = Vector2( 220, 60 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextureRect/PlayButton"]
margin_left = 70.0
margin_right = 239.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.113725, 0.627451, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0.0470588, 0.568627, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "PLAY"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="Button" parent="TextureRect"]
margin_left = 890.0
margin_top = 100.0
margin_right = 1170.0
margin_bottom = 160.0
rect_min_size = Vector2( 220, 60 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextureRect/NextButton"]
margin_left = 70.0
margin_right = 239.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.192157, 0.72549, 0.0784314, 1 )
custom_colors/font_color_shadow = Color( 0.0156863, 0.270588, 0.172549, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "NEXT"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PrevButton" type="Button" parent="TextureRect"]
margin_left = 110.0
margin_top = 100.0
margin_right = 390.0
margin_bottom = 160.0
rect_min_size = Vector2( 220, 60 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextureRect/PrevButton"]
margin_left = 70.0
margin_right = 239.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.901961, 0.294118, 0.294118, 1 )
custom_colors/font_color_shadow = Color( 0.65098, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "PREV"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AcceptButton" type="Button" parent="TextureRect"]
margin_left = 115.0
margin_top = 510.0
margin_right = 395.0
margin_bottom = 570.0
rect_min_size = Vector2( 220, 60 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextureRect/AcceptButton"]
margin_left = 40.0
margin_right = 239.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.662745, 0.788235, 0.0470588, 1 )
custom_colors/font_color_shadow = Color( 0.352941, 0.380392, 0.258824, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "ACCEPT"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioBack" type="Node" parent="TextureRect"]
script = ExtResource( 6 )

[node name="Electro_back" type="AudioStreamPlayer2D" parent="TextureRect/AudioBack"]
stream = ExtResource( 4 )

[node name="Piano_back" type="AudioStreamPlayer2D" parent="TextureRect/AudioBack"]
stream = ExtResource( 7 )

[node name="Reggae_back" type="AudioStreamPlayer2D" parent="TextureRect/AudioBack"]
stream = ExtResource( 10 )

[node name="Rap_back" type="AudioStreamPlayer2D" parent="TextureRect/AudioBack"]
stream = ExtResource( 8 )

[node name="AudioSample" type="Node" parent="TextureRect"]
script = ExtResource( 9 )

[node name="Reggae_sample" type="AudioStreamPlayer2D" parent="TextureRect/AudioSample"]

[node name="Rap_sample" type="AudioStreamPlayer2D" parent="TextureRect/AudioSample"]

[node name="Void_sample" type="AudioStreamPlayer2D" parent="TextureRect/AudioSample"]

[node name="PannelTexture" type="ColorRect" parent="TextureRect"]
margin_left = 490.0
margin_top = 110.0
margin_right = 790.0
margin_bottom = 630.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pannel" type="Label" parent="TextureRect/PannelTexture"]
margin_right = 300.0
margin_bottom = 520.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.388235, 0.368627, 0.368627, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
align = 1
autowrap = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="TextureRect/PannelTexture"]
margin_left = 50.0
margin_top = 500.0
margin_right = 250.0
margin_bottom = 600.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="TextureRect/PlayButton" to="TextureRect" method="_on_PlayButton_pressed"]
[connection signal="pressed" from="TextureRect/NextButton" to="TextureRect" method="_on_NextButton_pressed"]
[connection signal="pressed" from="TextureRect/PrevButton" to="TextureRect" method="_on_PrevButton_pressed"]
[connection signal="pressed" from="TextureRect/AcceptButton" to="TextureRect" method="_on_AcceptButton_pressed"]
